--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -27,6 +27,15 @@
     padding: 10px;
 }
 
+.emptyMessage{
+    /* border: 2px solid black; */
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .characterCard{
     width: 30%;
     margin: 10px;
